feat: Add bidirectional support for IPYNB and ODT formats
This commit introduces full bidirectional conversion support for Jupyter Notebook (.ipynb)
and OpenDocument Text (.odt) formats.

- Updated  to include 'ipynb' and 'odt' in supported formats
  enums and the tool description.
- Modified  to expand the test matrix and create fixtures
  for .ipynb and .odt, ensuring comprehensive testing and backward compatibility.
- Updated  and  to reflect the new formats in conversion
  matrices, format categories, and examples.
- Bumped project version to 0.4.0 in .

--- a/tests/output/test.html
+++ b/tests/output/test.html
@@ -1,4 +1,1 @@
-<p><span id="ch001.xhtml"></span></p>
-<section id="ch001.xhtml_test" class="level1">
-<h1>Test</h1>
-</section>
+<h1 id="test"><span id="anchor"></span>Test</h1>
